# artifact

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md
data/: test.lisp
src/: CMakeLists.txt
src/afct/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  artifact.cpp  artifact.hpp  builder.cpp  builder.hpp  env.cpp  env.hpp  eval.cpp  eval.hpp  expr.cpp  expr.hpp  function.cpp  function.hpp  native.cpp  native.hpp  parse.cpp  parse.hpp  prelude.cpp  prelude.hpp  querier.cpp  querier.hpp  util.cpp  util.hpp  visitor.cpp  visitor.hpp
src/test/: CMakeLists.txt  builder.cpp  eval.cpp  expr.cpp  function.cpp  lex.cpp  main.cpp  parse.cpp  querier.cpp  util.cpp  util.hpp  visitor.cpp
